# -com.webos.service.power2

./: CMakeLists.txt  README.md  astyle_options  productList.xlsx
files/auto/conf/: pms.conf.in
files/auto/sysbus/: com.webos.service.power2.perm.json  com.webos.service.power2.role.json.in  com.webos.service.power2.service.in
files/conf/: pms.conf.in
files/conf/ose/: pms.conf.in
files/conf/pmlog/: powermgr.conf.in
files/launch/: powermgr.conf.in
files/launch/device/: powermgr.conf.in
files/launch/emulator/: powermgr.conf.in
files/ose/sysbus/: com.webos.service.power2.perm.json
files/pkgconfig/: powerd.pc.in
files/sysbus/: com.palm.display.api.json  com.palm.display.perm.json  com.palm.sleep.api.json  com.palm.sleep.perm.json  com.webos.service.power2.api.json  com.webos.service.power2.groups.json  com.webos.service.power2.perm.json  com.webos.service.power2.role.json.in  com.webos.service.power2.service.in
include/internal/: clock.h  powerd-debug.h  wait.h
include/private/common/: LunaPmsRoot.h  PMSCommon.h  PowerManagerService.h  PowerStateClientsMgr.h  PowerStateClientsMgrImpl.h
include/private/pmscore/: PmsLuna2Utils.h  PowerManagerService.h  WakelockClientsMgr.h  WakelockClientsMgrImpl.h
include/private/pmslogging/: PmsLogging.h
include/private/shutdown/: ShutdownCategoryMethods.h  ShutdownClientsMgr.h  ShutdownClientsMgrImpl.h  ShutdownEvents.h  ShutdownStateHandler.h  State.h  StateShutdownAction.h  StateShutdownApps.h  StateShutdownAppsProcess.h  StateShutdownIdle.h  StateShutdownServices.h  StateShutdownServicesProcess.h
include/private/sleepd/: SleepdCategoryMethods.h  SleepdPowerCategory.h  SleepdShutdownCategory.h  SleepdTimeCategory.h  SleepdTimeoutCategory.h
include/private/util/: NyxUtil.h
include/public/powerd/: powerd-glib.h  powerd-lunaservice.h  powerd.h
libpowerd/: CMakeLists.txt  clock.c  commands.c  init.c  init.h  wait.c
powermgr_test/: CMakeLists.txt
powermgr_test/src/: JUtil.h  Singleton.cpp  Singleton.hpp  TestGlobal.cpp  TestGlobal.h  TestPMClientBlock.cpp  TestPMInput.h  TestPMLunaInterfaceCommon.cpp  TestPMPmsConfigLinux.cpp  TestPMPmsErrors.cpp  TestPMPowerManagerService.cpp  TestPMPowerStateClientsMgrImpl.cpp  TestPMShutdownClientsMgrImpl.cpp  TestPMShutdownStateHandler.cpp  TestPMStateShutdownAction.cpp  TestPMStateShutdownAppsProcess.cpp  TestPMStateShutdownIdle.cpp  TestPMStateShutdownServices.cpp  TestPMStateShutdownServicesProcess.cpp  TestPMWakelockClientsMgrImpl.cpp  TestTemplates.h  TestUtil.h  main.cpp
scripts/public/: alarms.xml  cpufreq_governor_parameters  msm_suspend  set_cpu_offline  set_cpu_online  set_cpufreq_hotplug_governor  set_cpufreq_ondemand_governor  set_cpufreq_powersave_governor  suspend_action  update_timestamp
src/: main.cpp
src/Manager/: PowerManagerService.cpp  PowerStateClientsMgrImpl.cpp
src/PmsLunaInterface/: LunaPmsRoot.cpp
src/pmsLogging/: PmsLogging.cpp
src/pmscore/: PowerManagerService.cpp  WakelockClientsMgrImpl.cpp
src/shutdown/: ShutdownCategoryMethods.cpp  ShutdownClientsMgrImpl.cpp  ShutdownStateHandler.cpp  StateShutdownAction.cpp  StateShutdownApps.cpp  StateShutdownAppsProcess.cpp  StateShutdownIdle.cpp  StateShutdownServices.cpp  StateShutdownServicesProcess.cpp
src/sleepd/: SleepdCategoryMethods.cpp  SleepdPowerCategory.cpp  SleepdShutdownCategory.cpp  SleepdTimeCategory.cpp  SleepdTimeoutCategory.cpp
src/util/: NyxUtil.cpp  timersource.cpp
